--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="hu">
+
 <head>
-<title>Killerwatt
-</title>
+    <title>Tesztjelleggel működő oldal</title>
+    <link rel="stylesheet" href="css/mystyle.css"> 
 </head>
+
 <body>
-<h1>Működik</h1>
+    <h1>Működik</h1>
 </body>
+
 </html>
