--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
 <body>
     <h1>Működik!</h1>
+    <p>Javasolt Chrome kiterjesztések</p>
+    <ul>
+        <li><a href="https://chrome.google.com/webstore/detail/measure-it/jocbgkoackihphodedlefohapackjmna?hl=en-US" target="_blank">Measure it!</a></li>
+        <li><a href="https://chrome.google.com/webstore/detail/just-color-picker/eimbhjnmkapfcaibnmnefclolghnaalk/related?hl=en-US" target="_blank">Just Color Picker</a></li>
+        <li><a href="https://chrome.google.com/webstore/detail/web-developer/bfbameneiokkgbdmiekhjnmfkcnldhhm?hl=en-US" target="_blank">Web Develpoer</a></li>
+        <li><a href="https://chrome.google.com/webstore/detail/what-font-find-font/djgfpbegnihdgbngpmhjnlchgglngcdn?hl=en-US" target="_blank">What font</a></li>
+    </ul>
 </body>
 
 </html>
